Fix sizing and alignment of projects

--- a/css/section-experience.css
+++ b/css/section-experience.css
@@ -25,8 +25,9 @@
 
 .projects-container {
     border-radius: 2px;
-    padding-top: 32px;
-    padding-bottom: 24px;
+    padding-top: 24px;
+    padding-bottom: 18px;
+    min-height: 200px;
 }
 
 .projects-container>img {
